Applying patch for CredentialImpl.hashCode(). This fixes bug 43859. Thanks to Jonathan Addison for the patch.
git-svn-id: https://svn.apache.org/repos/asf/lenya/trunk@615959 13f79535-47bb-0310-9956-ffa450edef68